--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,52 @@
     width: auto;   
 }
 
+/* Dropdown Button */
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+
 li {
     font-size: 16px;
     color: blue;
@@ -119,17 +165,14 @@ li {
 /* Contact Us */
 .column-contact {
     float: left;
-    width: 50%;
+    width: 48%;
     padding: 10px;
     height: 500px; 
-    border: 1px solid rgb(146, 129, 129);
-    margin-left: 50px;
+    border: 1px solid rgb(161, 24, 24);
+    margin-left: 25px;
 }
-.text-body {
-    margin-left: 50px;
-}
-#inquiry {
-    margin-left: 50px;
+.container-contact {
+  text-align: center;
 }
 .button-submit{
     margin-top: 20px;
@@ -139,21 +182,23 @@ li {
     font-size: 25px;
 }
 .column-map {
-    width: 50%;
-    padding: 10px;
-    height: 500px; 
-    margin-left: 1000px;
+  float: right;
+  width: 48%;
+  padding: 15px;
+  height: 500px; 
+  border: 1px solid rgb(146, 129, 129);
+  margin-right: 25px;
 }
 iframe {
-    margin-left: 60px;
+    margin-left: 0px;
 }
 .contact-myhealthstory {
     font-family:'Times New Roman', Times, serif;
     font-size: 20px;
     color: Purple;
     text-align: center;
-    margin-left: 100px;
-    margin-right: 55px;
+    margin-left: 10px;
+    margin-right: 25px;
     margin-top: 5px;
 }
 
@@ -184,6 +229,47 @@ iframe {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+/* Insurance */
+.text-insurance {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
+}
+
+.insurance-upload {
+  margin-left: 25px;
+}
+.ins-upload-button {
+  margin-left: 0px;
+  background-color: rgba(255, 255, 255, 0.87);
+  border-radius: 5px;
+  font-size: 12px;
+}
+.insurance-upload-complete {
+  height: 300px;
+  width: auto;
+  box-align: center;
+  padding-right: 25px;
+}
+.column-ins-1 {
+  float: left;
+  width: 50%;
+  padding: center;
+  height: 500px; 
+  border: 1px solid rgb(146, 129, 129);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
+}
+
+.column-ins-2 {
+  float: right;
+  width: 50%;
+  padding: center;
+  height: 500px; 
+  border: 1px solid rgb(146, 129, 129);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
 }
 
 /* FOOTER */
