--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 /* Nav-bar */
 .container {
     margin: 48px 12px;
+    width: 100%;
 }
 .text-title {
     color: red;
@@ -16,16 +17,28 @@
 }
 .navbar {
     box-shadow: 2px 4px;
+    background-color:rgb(206, 175, 255);
 }
 .navbar-logo {
     height: 30px;
     width: auto;   
 }
+
+.topnav {
+  color: white;
+}
+
+#google_translate_element {
+  height: 52px;
+  width: auto;
+  color: red;
+}
+
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
+  background: rgb(206, 175, 255);
+  color: black;
+  padding: 16px 36px 16px 36px;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -40,6 +53,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  float: right;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -65,8 +79,6 @@
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
-
-
 
 
 li {
@@ -253,6 +265,11 @@ iframe {
   box-align: center;
   padding-right: 25px;
 }
+
+.container-ins {
+  display: none;
+}
+
 .column-ins-1 {
   float: left;
   width: 50%;
@@ -261,6 +278,7 @@ iframe {
   border: 1px solid rgb(146, 129, 129);
   font-family: 'Times New Roman', Times, serif;
   font-size: 18px;
+  background-color: white;
 }
 
 .column-ins-2 {
@@ -271,16 +289,77 @@ iframe {
   border: 1px solid rgb(146, 129, 129);
   font-family: 'Times New Roman', Times, serif;
   font-size: 18px;
+  background-color: white;
 }
+
+.topnav {
+  color: white;
+}
+
+#google_translate_element {
+  height: 52px;
+  width: auto;
+  color: red;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  background: rgb(206, 175, 255);
+  color: black;
+  padding: 16px 36px 16px 36px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  float: right;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
 
 /* FOOTER */
 .footer-bottom {
-    background: rgb(206, 175, 255);
-    color: white;
-    text-align: center;    
-    font-family: 16px/26px "Raleway", sans-serif;
-    font-size: 18px;
-    padding-bottom: 10px; 
+  background-color: rgb(206, 175, 255);
+  color: white;
+  text-align: center;    
+  font-family: 16px/26px "Raleway", sans-serif;
+  font-size: 18px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 
@@ -403,8 +482,7 @@ body {
 /* Add a black background color to the top navigation */
 .topnav {
     background-color:rgb(206, 175, 255);
-    overflow: hidden;
-}
+  }
 
 /* Style the links inside the navigation bar */
 .topnav a {
@@ -427,8 +505,6 @@ body {
 .topnav-right {
   float: right;
 }
-
-
 
 .body {
   font-family: "Open Sans", sans-serif;
@@ -514,4 +590,94 @@ table th {
   table td:last-child {
     border-bottom: 0;
   }
+}
+
+/* Demographics */
+
+.demo-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.demographic-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.emergency-contact-form {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  padding-left: 50px;
+  margin-left: 50px;
+}
+
+.myDemo-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Providers */
+
+.provider-upload {
+  margin-left: 25px;
+}
+
+#accordion-1 {
+  display: none;
+}
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active-tab, .accordion:hover {
+  background-color: lightgreen;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+
+/* Daily Log */
+
+/* Log Out */
+.logout-body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+#logout-canvas {
+  border: 1px soild black;
+}
+.logout-text {
+  display: inline-block;
+  padding: .3em;
+  font-family: 'Megrim', cursive;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  user-select: none;
+  transform: translate(-50%,-50%);
+  color: rgba(255,255,255,.68);
+  border: .075em solid rgba(255,255,255,.1);
 }
